# vulkan-game-engine-poc

./: .gitignore  CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  Device.cpp  GameEngine.cpp  Model.cpp  Pipeline.cpp  SwapChain.cpp  Window.cpp  compile_shader.sh
src/engine/include/Engine/: Device.hpp  GameEngine.hpp  Model.hpp  Pipeline.hpp  SwapChain.hpp  Window.hpp
src/engine/shaders/: Triangle.frag  Triangle.vert
src/engine/spv/: Triangle.frag.spv
src/game/: CMakeLists.txt
src/game/common/: CMakeLists.txt  GameLoader.cpp  Logger.cpp
src/game/common/include/GameCommon/: Config.hpp  GameLoader.hpp  Logger.hpp
